style: Modify .scalafmt.conf

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,24 @@
-version = 3.8.1
+# https://scalameta.org/scalafmt/docs/configuration.html#version
+version = 3.8.2
+
+#https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
 runner.dialect = scala3
+
+# assumeStandardLibraryStripMargin = true
+maxColumn = 100
+assumeStandardLibraryStripMargin = true
+
+# https://scalameta.org/scalafmt/docs/configuration.html#alignment
+align.preset = some
+align.multiline = false
+
+# https://scalameta.org/scalafmt/docs/configuration.html#newlines-danglingparentheses
+danglingParentheses.preset = true
+
+# https://scalameta.org/scalafmt/docs/configuration.html#redundantbraces
+# https://scalameta.org/scalafmt/docs/configuration.html#imports
+rewrite.rules = [RedundantBraces, Imports]
+rewrite.imports.sort = scalastyle
+
+# https://scalameta.org/scalafmt/docs/configuration.html#docstringsstyle
+docstrings.wrap = fold
